# passionfruitdev

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs
package/: Cargo.toml  README.md
package/src/: lib.rs  website.rs
passionfruitdev/: Cargo.toml
passionfruitdev/src/: cli.rs  lib.rs
passionfruitdev/src/components/: README.md
passionfruitdev/src/features/: mod.rs
passionfruitdev/src/features/website/: mod.rs
src/: cli.rs  main.rs
templates/website/: Cargo.toml  index.html
templates/website/.github/workflows/: nightly.yaml
templates/website/public/: manifest.json
templates/website/src/: main.rs
website/: Cargo.toml
