[package]
name = "passionfruitdev-cli"
version = "0.1.2"
authors = ["Jim Hill <jim.hill.r@gmail.com>"]
edition = "2021"
license = "MIT"
description = "PassionFruit CLI: Tooling for rapid deployment of hobbyist applications"
repository = "https://github.com/rust-lang/cargo/"
homepage = "https://github.com/PassionFruitDev/pf-cli"
documentation = "https://github.com/PassionFruitDev/pf-cli/docs"
readme = "README.md"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
toml_edit = "0.20.7"
